--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.align-flex-start {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    gap: 40px;
+}
+
 img {
     width: 412px;
     height: 180px;
@@ -19,39 +28,55 @@ img {
 
 h1 {
     font-weight: bold;
-    font-size: 35px;
-    width: 280px;
-    margin-top: 40px;
+    font-size: 45px;
 }
 
-.paragraph-principal {
-    width: 260px;
-    margin-right: 11px;
-    margin-top: 30px;
-    margin-bottom: 50px;
+.section-all {
+    display: flex;
+    width: 90%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 5px;
+    gap: 30px;
+}
+
+.background {
+    margin-left: 10px;
+    width: 300px;
+    padding: 15px;
+    background-color: blueviolet;
+    align-items: center;
+    display: flex;
+    border-radius: 10px;
+    justify-content: flex-start;
+    flex-direction: column;
+    background-color: rgba(236, 190, 209, 0.552);
+}
+
+.h2 {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .preparation-time {
     font-weight: bold;
     font-size: 20px;
-    padding-right: 60px;
     padding-bottom: 10px;
 }
 
 .ingredient-list {
     display: flex;
     flex-direction: column;
-    margin-left: 1px;
+    margin-left: 30px;
     gap: 10px;
-    width: 170px;
-    margin-bottom: 60px;
 }
 
 .ingredients {
     font-weight: bold;
     font-size: 30px;
-    padding-right: 105px;
-    padding-bottom: 10px;
 }
 
 .recipe-pass {
@@ -60,14 +85,12 @@ h1 {
     margin-left: 30px;
     gap: 10px;
     width: 250px;
-    margin-bottom: 60px;
 }
 
 .instructions {
     font-weight: bold;
     font-size: 30px;
     padding-right: 90px;
-    padding-bottom: 10px;
 }
 
 .recipe-orders {
@@ -76,21 +99,17 @@ h1 {
     margin-left: 30px;
     gap: 10px;
     width: 250px;
-    margin-bottom: 60px;
 }
 
 .nutrition {
     font-weight: bold;
     font-size: 30px;
     padding-right: 130px;
-    margin-bottom: -5px;
 }
 
 .paragraph-secundary {
     width: 300px;
     margin-right: -50px;
-    margin-top: 30px;
-    margin-bottom: 10px;
 }
 
 .posicione {
@@ -106,3 +125,39 @@ h1 {
 th {
     padding: 8px;
   }
+
+  @media (min-width: 750px) {
+
+    .align-flex-start {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        width: 450px;
+    }
+
+    img {
+        width: 450px;
+        height: 180px;
+    }
+
+    h1 {
+        font-weight: bold;
+        font-size: 35px;
+        width: 400px;
+        margin-top: 40px;
+    }
+
+    .paragraph-principal {
+        margin-top: 30px;
+        margin-bottom: 50px;
+        
+    }
+
+    .preparation-time {
+        font-weight: bold;
+        font-size: 20px;
+        padding-right: 60px;
+        padding-bottom: 10px;
+        margin-right: 180px;
+    }
+}
