--- a/style.css
+++ b/style.css
@@ -5,51 +5,51 @@
 }
 
 body {
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: rgba(236, 190, 209, 0.552);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .align-flex-start {
+    background-color: white;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    gap: 40px;
 }
 
 img {
-    width: 412px;
-    height: 180px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px;
 }
 
 h1 {
     font-weight: bold;
-    font-size: 45px;
+    font-size: 32px;
 }
 
 .section-all {
     display: flex;
-    width: 90%;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    padding: 5px;
+    padding: 32px;
     gap: 30px;
 }
 
 .background {
-    margin-left: 10px;
-    width: 300px;
+    width: 100%;
     padding: 15px;
-    background-color: blueviolet;
-    align-items: center;
     display: flex;
     border-radius: 10px;
-    justify-content: flex-start;
     flex-direction: column;
     background-color: rgba(236, 190, 209, 0.552);
 }
@@ -70,8 +70,9 @@ h1 {
 .ingredient-list {
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
     gap: 10px;
+    list-style-position: inside;
+    margin-left: 6px;
 }
 
 .ingredients {
@@ -84,7 +85,6 @@ h1 {
     flex-direction: column;
     margin-left: 30px;
     gap: 10px;
-    width: 250px;
 }
 
 .instructions {
@@ -98,7 +98,6 @@ h1 {
     flex-direction: column;
     margin-left: 30px;
     gap: 10px;
-    width: 250px;
 }
 
 .nutrition {
@@ -107,45 +106,73 @@ h1 {
     padding-right: 130px;
 }
 
+.fourth-section {
+    width: 100%;
+}
+
 .paragraph-secundary {
     width: 300px;
     margin-right: -50px;
 }
 
-.posicione {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px;
+
+table {
+    border-collapse: collapse;
 }
 
-.left {
-    margin-right: 70px;
+th,
+td {
+    padding: 8px;
 }
 
 th {
-    padding: 8px;
-  }
+    padding-right: 100px;
+}
 
-  @media (min-width: 700px) {
+td {
+    padding-left: 20px;
+}
+@media (min-width: 600px) {
 
-    .background {
-        margin-left: 10px;
+    .align-flex-start {
+        padding: 32px;
         width: 600px;
-        padding: 15px;
-        background-color: blueviolet;
-        align-items: center;
         display: flex;
-        border-radius: 10px;
-        justify-content: flex-start;
+        align-items: flex-start;
+        justify-content: center;
         flex-direction: column;
-        background-color: rgba(236, 190, 209, 0.552);
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     .ingredient-list {
         display: flex;
         justify-content: flex-start;
         flex-direction: column;
-        margin-right: 300px;
         gap: 10px;
+    }
+
+    .paragraph-secundary {
+        width: 500px;
+    }
+
+    .left {
+        margin-right: 200px;
+    }
+
+    table {
+        border-collapse: collapse;
+    }
+
+    th,
+    td {
+        padding: 8px;
+    }
+
+    th {
+        padding-right: 250px;
+    }
+
+    td {
+        padding-left: 20px;
     }
 }
